packages/mm-shared/src/event/eventSelect/SelectedEvent.scss
@import '../../theme/main';

.SelectedEvent-block {
  display: flex;
  padding: 1em 2em;
  margin-bottom: 1em;
  background-color: #f3edf5;
  align-items: center;
  cursor: pointer;

  .SelectedEvent-image {
    width: 60px;

    img {
      width: 100%;
    }
  }

  .SelectedEvent-content {
    padding-left: 15px;
    width: 100%;

    .SelectedEvent-title {
      color: $main;
      font-weight: 500;
      font-size: 19px;
    }
  }
}

